добавлен mashine key для дебаг веб-конфига, чтобы не слетала авторизация на хостинге.
добавлена иконка на вкладку веб-браузера
красивости по мелочи

--- a/FCGagarin.WebUI/FCGagarin.WebUI.csproj
+++ b/FCGagarin.WebUI/FCGagarin.WebUI.csproj
@@ -225,6 +225,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\fcgagarin.jpg" />
+    <Content Include="Content\Images\FCG_ico_16x16.ico" />
     <Content Include="Content\Slate\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -237,6 +239,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\correctpresent.pubxml" />
+    <None Include="Properties\PublishProfiles\Reg.ru.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -256,6 +260,7 @@
     </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
