--- a/FCGagarin.WebUI/Web.config
+++ b/FCGagarin.WebUI/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="FCGagarinContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FCGagarinDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="FCGagarinContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FCGagarinDB;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="FCGagarinContext" connectionString="Data Source=37.140.192.130;Initial Catalog=u0209107_FCGagarinDB;Integrated Security=False;User ID=u0209107_admin;Password=ETYscQK3iO" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,6 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
+    <customErrors mode="Off" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
