--- a/FCGagarin.DAL.Repositories.Interfaces/FCGagarin.DAL.Repositories.Interfaces.csproj
+++ b/FCGagarin.DAL.Repositories.Interfaces/FCGagarin.DAL.Repositories.Interfaces.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IGenericRepository.cs" />
     <Compile Include="INewsRepository.cs" />
     <Compile Include="IPhotoAlbumRepository.cs" />
+    <Compile Include="IPhotoRepository.cs" />
     <Compile Include="IUserProfileRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
