--- a/FCGagarin.BLL.Services/FCGagarin.BLL.Services.csproj
+++ b/FCGagarin.BLL.Services/FCGagarin.BLL.Services.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,6 +61,7 @@
   <ItemGroup>
     <Compile Include="NewsService.cs" />
     <Compile Include="PhotoAlbumService.cs" />
+    <Compile Include="PhotoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserProfileService.cs" />
   </ItemGroup>
