--- a/FCGagarin.PL.WebUI/packages.config
+++ b/FCGagarin.PL.WebUI/packages.config
@@ -6,9 +6,10 @@
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="Bootstrap.Datepicker" version="1.6.4" targetFramework="net461" />
-  <package id="dropzone" version="4.2.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="jQuery" version="3.1.1" targetFramework="net461" />
+  <package id="jQuery" version="2.2.4" targetFramework="net461" />
+  <package id="jQuery.FileUpload" version="9.11.1" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net461" />
