кэширование (тупое) + минификсы

--- a/FCGagarin.PL.WebUI/Web.config
+++ b/FCGagarin.PL.WebUI/Web.config
@@ -27,6 +27,18 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+  <location path="Data">
+    <system.webServer>
+      <staticContent>
+        <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+      </staticContent>
+      <httpProtocol>
+        <customHeaders>
+          <add name="Cache-Control" value="public" />
+        </customHeaders>
+      </httpProtocol>
+    </system.webServer>
+  </location>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
