--- a/FCGagarin.BLL.Services.Interfaces/FCGagarin.BLL.Services.Interfaces.csproj
+++ b/FCGagarin.BLL.Services.Interfaces/FCGagarin.BLL.Services.Interfaces.csproj
@@ -61,6 +61,7 @@
     <Compile Include="INewsService.cs" />
     <Compile Include="IPhotoAlbumService.cs" />
     <Compile Include="IPhotoService.cs" />
+    <Compile Include="IRoundService.cs" />
     <Compile Include="IService.cs" />
     <Compile Include="IUserProfileService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
