практически работает  импорт туров

--- a/FCGagarin.BLL.Presenters.Interfaces/FCGagarin.BLL.Presenters.Interfaces.csproj
+++ b/FCGagarin.BLL.Presenters.Interfaces/FCGagarin.BLL.Presenters.Interfaces.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="INewsPresenter.cs" />
+    <Compile Include="IRoundPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
