--- a/FCGagarin.DAL.Repositories/FCGagarin.DAL.Repositories.csproj
+++ b/FCGagarin.DAL.Repositories/FCGagarin.DAL.Repositories.csproj
@@ -69,6 +69,7 @@
     <Compile Include="PhotoAlbumRepository.cs" />
     <Compile Include="PhotoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundRepository.cs" />
     <Compile Include="UserProfileRepository.cs" />
   </ItemGroup>
   <ItemGroup>
