--- a/FCGagarin.PL.Admin/FCGagarin.PL.Admin.csproj
+++ b/FCGagarin.PL.Admin/FCGagarin.PL.Admin.csproj
@@ -19,4 +19,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FCGagarin.BLL.Services.Interfaces\FCGagarin.BLL.Services.Interfaces.csproj" />
+    <ProjectReference Include="..\FCGagarin.BLL.Services\FCGagarin.BLL.Services.csproj" />
+  </ItemGroup>
+
 </Project>
